Feat: model tests

--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -29,8 +29,9 @@
                                 </div>
                                 </div>
                     <li class="dropdown" id="icon">
+                        
                         <a href="" class="nav-link" lass="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-user"></i><p>Profile</p>
                         </a>
                         {% if user.is_authenticated %}
                             <ul class="dropdown-menu" role="menu">
